--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -5,11 +5,14 @@ FROM python:3.7
 RUN python -m pip install --upgrade pip
 
 # set working diretory
-WORKDIR /code
+WORKDIR /src
 
 # copy requirements.txt and install
 COPY requirements.txt requirements.txt
 RUN python -m pip install -r requirements.txt
+
+ENV FLASK_ENV=development
+ENV FLASK_APP=app.py
 
 # copy all project files
 COPY . .
