--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,13 +1,9 @@
-# start with a base image
-FROM python:3.7
+FROM python:3.7-slim
 
-# update pip
 RUN python -m pip install --upgrade pip
 
-# set working diretory
 WORKDIR /src
 
-# copy requirements.txt and install
 COPY requirements.txt requirements.txt
 RUN python -m pip install -r requirements.txt
 
